--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "language-ash",
   "main": "./lib/language-ash",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "The language package for my programming language called 'Ash'",
-  "keywords": [
-  ],
+  "keywords": [],
   "activationCommands": {
     "atom-workspace": "language-ash:toggle"
   },
@@ -13,6 +12,5 @@
   "engines": {
     "atom": ">=0.174.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
